Fixing mega nav spacing issues. QHWT-608

--- a/src/components/header/css/component.scss
+++ b/src/components/header/css/component.scss
@@ -341,8 +341,7 @@
             }
             
             @include QLD-media(lg) {
-                @include QLD-space(padding, 3unit 0);
-                padding: 32px 0;
+                @include QLD-space(padding, 2unit 0);
                 flex-grow: 1;
             }
 
@@ -528,8 +527,7 @@
             width: 360px;
             position: relative;
             background-color: transparent;
-            @include QLD-space(padding, 3unit 0);
-            padding: 32px 0;
+            @include QLD-space(padding, 2unit 0);
         }
         .qld__search__label{
 
